fix: weird spacing issue from advanced layout

--- a/src/page/input-panel/input-panel.scss
+++ b/src/page/input-panel/input-panel.scss
@@ -160,14 +160,6 @@
     }
 }
 
-.pendulum-frame-picker-overlay {
-    width: 613px; // Perfect fit
-    .ant-popover-content .ant-popover-inner-content {
-        border-radius: 2px;
-        border: var(--bw) solid var(--sub-level-1);
-    }
-}
-
 .global-style-picker-overlay {
     &.low-index {
         z-index: 1000;
