--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -2,6 +2,9 @@
 	.manager_visible .app-container {
 		margin: auto;
 	}
+	.frame-blender-overlay {
+		width: 613px !important;
+	}
 }
 
 @media only screen and (max-width: 1600px) {
@@ -482,6 +485,9 @@
 			}
 		}
 	}
+	.frame-blender-overlay {
+		width: unset;
+	}
 }
 
 @media only screen and (max-width: 640px) {
@@ -505,7 +511,7 @@
 	.far-sight-button {
 		display: block;
 	}
-	.ant-popover.pendulum-frame-picker-overlay {
+	.ant-modal.frame-blender-overlay {
 		width: unset;
 		.frame-layout-container {
 			grid-template-columns: 1fr;
